# accord

./: .env.template  .gitignore  .pre-commit-config.yaml  .prov_cache.json  CHANGELOG.md  README.md  accord.tex  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  provenance.yml
agents/: README.md
agents/AGENT-COMMS01/: prompt.md
agents/AGENT-DATA01/: prompt.md
agents/AGENT-ENG01/: prompt.md
agents/AGENT-FINANCE01/: prompt.md
bus/: README.md
deploy/: mcp-file.yaml  mcp-search.yaml
docs/: Provenance.md  Testing.md  agent-scope-matrix.md  index.jsonl  interface-and-deployment.md
experiments/: README.md  run.yaml
indexes/: latest.json
mcp/: __init__.py  client.py  index.py
orchestrator/: __init__.py  experiment_loop.py  governance.py  interaction_tracker.py  llm.py  onboarding.py  run_experiment.py  runtime.py
scripts/: __init__.py  gedi_ballot.py  gen_roster.py  gen_scope_matrix.py  health_mcp.py  index_build.py  lint_bus.py  metrics_behavior.py  policy_synth_pipeline.py  provtools.py  provtools_cache.py  runtime_guard.py  validate_alou.py  with-env.sh
tests/: conftest.py  test_auto_ballot_discovery.py  test_events_logging.py  test_experiment_sidecar_attestation.py  test_gedi_ballot.py  test_gen_roster_scope.py  test_health_mcp.py  test_index_build.py  test_lint_bus.py  test_mcp_remote_fallback.py  test_metrics_behavior.py  test_onboarding.py  test_pipeline_json.py  test_policy_synth_pipeline.py  test_provtools.py  test_provtools_remote_and_type.py  test_runtime_guard.py  test_runtime_paths.py  test_validate_alou.py
(+50 files in other folders)
